# imaged_based_visual_servoing

./: .gitignore  README.md  analyze_ibvs_log.py
src/ibvs_controller/: CMakeLists.txt  package.xml
src/ibvs_controller/src/: ibvs_controller.cpp
src/my_simple_controllers/: CMakeLists.txt  package.xml  plugins.xml
src/my_simple_controllers/include/my_simple_controllers/: cartesian_velocity_controller.h  state_controller.h
src/my_simple_controllers/src/: cartesian_velocity_controller.cpp  parameters.yaml  state_controller.cpp  trajectory_planner.cpp
src/panda_ros2_gazebo/: setup.py
src/panda_ros2_gazebo/config/: cartesian_velocity_controller.yaml  params.yaml
src/panda_ros2_gazebo/description/models/panda/: model.config  panda.urdf.xacro
src/panda_ros2_gazebo/description/models/red_ball/: model.sdf
src/panda_ros2_gazebo/description/worlds/: panda.world
src/panda_ros2_gazebo/launch/: gazebo.launch.py  kinect.launch.py
src/visual_servoing/: CMakeLists.txt  package.xml
src/visual_servoing/src/: ball_detector.cpp
